# jobai-agent

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENCE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
app/: lifespan.py  main.py
app/api/: jobs.py  routes.py
app/core/: config.py  database.py
app/data_extraction/email_extraction/: email_alert_fetcher.py  imap_client.py  parser_base.py
app/data_extraction/email_extraction/parsers/: indeed.py  linkedin.py
app/data_ingestion/: job_ingestion.py
app/extraction/email/: email_alert_fetcher.py  imap_client.py  parser_base.py  provider.py
app/extraction/email/parsers/: indeed.py  linkedin.py
app/ingestion/: email_ingestion.py  web_ingestion.py
app/models/: job.py
app/scrapers/: base.py  indeed.py
app/services/: job_ingestion.py  job_services.py
app/tests/: conftest.py  test_jobs.py
app/utils/: clean_fixture.py  manage_fixture.py  truncate_string.py
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: job_applications.py  job_offers.py  job_postings.py  routes.py
backend/app/core/: config.py  database.py
backend/app/db/: base.py
backend/app/extraction/email/: email_alert_fetcher.py  (+1 more)
backend/app/ingestion/: email_ingestion.py  web_ingestion.py
backend/app/models/: __init__.py  job_application.py  job_offer.py  job_posting.py
backend/app/repositories/: job_application.py  job_offer.py  job_posting.py
backend/app/samples/: writer.py
backend/app/schemas/: job_application.py  job_offer.py  job_posting.py
backend/app/services/: job_application.py  job_offer.py  job_posting.py
backend/app/utils/: manage_fixture.py
backend/scripts/python/: add_header_to_file.py  generate_fixtures.py  generate_samples.py  ingest_emails.py
backend/scripts/shell/: debug_app.sh  debug_fixtures.sh  mkdir_mounted_folders.sh
backend/tests/: conftest.py
backend/tests/api/: test_job_applications_api.py  test_job_offers_api.py  test_job_posting_api.py
backend/tests/scripts/: test_add_header_to_file.py  test_add_header_to_file_shebang.py
frontend/: eslint.config.js  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/api/: client.ts  jobOffer.ts
frontend/src/mocks/: jobOffers.ts
frontend/src/pages/: JobOffers.tsx
frontend/src/types/: jobOffer.ts
scripts/: fixtures_folder_perms.sh
scripts/python/: generate_fixtures.py
tests/: test_jobs.py
(+40 files in other folders)
