[project]
name = "jobai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-doc==0.0.3",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.14.2",
    "black==25.9.0",
    "certifi==2025.10.5",
    "click==8.3.0",
    "dnspython==2.8.0",
    "dotenv==0.9.9",
    "email-validator==2.3.0",
    "fastapi==0.121.0",
    "fastapi-cli==0.0.14",
    "fastapi-cloud-cli==0.3.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "isort==7.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mypy-extensions==1.1.0",
    "openai>=2.7.2",
    "orjson==3.11.4",
    "packaging==25.0",
    "pathspec==0.12.1",
    "pip-review==1.3.0",
    "platformdirs==4.5.0",
    "playwright>=1.56.0",
    "playwright-stealth",
    "pluggy==1.6.0",
    "pre-commit>=4.4.0",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.2.12",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pydantic-extra-types==2.10.6",
    "pydantic-settings==2.11.0",
    "pygments==2.19.2",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "pytest-cov>=7.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "python-slugify>=8.0.4",
    "pytokens==0.3.0",
    "pyyaml==6.0.3",
    "rich==14.2.0",
    "rich-toolkit==0.15.1",
    "rignore==0.7.6",
    "ruff==0.14.4",
    "sentry-sdk==2.43.0",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "sqlalchemy>=2.0.44",
    "starlette==0.49.3",
    "testcontainers>=4.13.3",
    "typer==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "ujson==5.11.0",
    "urllib3==2.5.0",
    "uvicorn==0.38.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
]


[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true

